--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,13 +1,16 @@
 :root {
     --background: #1e1e2e; 
-    --background-light: #fdebf3;
     --button: #78c2ad;
     --text: #fdebf3;
-    --text-light: #1e1e2e; 
     --text-link: #78c2ad;
     --underline: #375a7f;
     --header: 'Rubik', sans-serif;
     --body: 'Josefin Sans', sans-serif; 
+}
+
+.light-mode {
+    --background: #fdebf3;
+    --text: #1e1e2e; 
 }
 
 html {
@@ -16,7 +19,7 @@ html {
 }
 
 body {
-    max-width: 540px;
+    max-width: 660px;
     margin: 0 auto;
     text-align: justify;
 }
